<resources>
    <string name="app_name">나혼자 지킴이</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_id">아이디를 입력하세요.</string>
    <string name="hint_password">비밀번호를 입력하세요.</string>
    <string name="hint_password_check">비밀번호 확인을 위해 입력하세요.</string>
    <string name="hint_address">주소를 입력하세요.</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register1">회원가입</string>
    <string name="btn_register2">가입하기</string>
</resources>