<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/signup_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/logo2" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:text="나혼자 지킴이"
                android:textAlignment="center"
                android:textColor="#2B28B6"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/signup_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingStart="20dp"
                android:text="회원가입"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_id"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:background="@drawable/rectangle"
                android:drawableStart="@drawable/custom_ic_person"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:hint="@string/hint_id"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/id_check"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/id_check"
                android:textAlignment="center"
                android:textColor="@color/bgcolor" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_passwd"
            android:layout_width="284dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rectangle"
            android:drawableStart="@drawable/custom_ic_https"
            android:drawableEnd="@drawable/passwd_eyes_off"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:maxLength="8"
            android:paddingEnd="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_passwd_check"
            android:layout_width="284dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle"
            android:drawableStart="@drawable/baseline_check_circle_24_no"
            android:drawableEnd="@drawable/passwd_eyes_off"
            android:hint="@string/hint_password_check"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:maxLength="8"
            android:paddingEnd="10dp"
            android:textAllCaps="true"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_adr"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangle"
            android:drawableStart="@drawable/custom_ic_home"
            android:hint="@string/hint_address"
            android:paddingStart="10dp"
            android:padding="4dp"
            android:lines="2"
            android:scrollHorizontally="false"
            android:inputType="textPostalAddress|textMultiLine"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textSize="15sp" />

        <Button
            android:id="@+id/register_btn2"
            android:layout_width="284dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/navi_btn2"
            android:text="@string/btn_register2"
            android:textColor="@color/bgcolor" />

        <Button
            android:id="@+id/register_back"
            android:layout_width="284dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/cancel"
            android:text="취소하기"
            android:textColor="@color/bgcolor" />

    </LinearLayout>

</LinearLayout>
