<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F7FE"
    android:orientation="vertical"
    tools:context=".setting_customerRevise">

    <!-- Top Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgcolor"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/revisetab"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#F4F7FE"
            app:srcCompat="@drawable/revisetab" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="19dp"
        android:gravity="start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/list_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="36dp"
            app:srcCompat="@drawable/id" />

        <TextView
            android:id="@+id/id"
            android:layout_width="235dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:hint="@string/hint_id"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingTop="12dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textSize="15sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/list_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="40dp"
                app:srcCompat="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:background="@drawable/rectangle"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="15sp" />
        </LinearLayout>

    <ImageView
        android:id="@+id/password_important"
        android:layout_width="232dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/password_important" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginVertical="20dp"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/list_password_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/password_check" />

            <EditText
                android:id="@+id/password_check"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/rectangle"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:ems="10"
                android:hint="@string/hint_password_check"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/list_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/address" />

            <EditText
                android:id="@+id/address_search"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/rectangle"
                android:ems="10"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:hint="@string/hint_address"
                android:inputType="textPostalAddress|textMultiLine"
                android:lines="2"
                android:paddingLeft="10dp"
                android:scrollHorizontally="false"
                android:textSize="15sp" />

        </LinearLayout>

    <ImageView
        android:id="@+id/reviseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/revisebutton" />

    <ImageView
        android:id="@+id/memberDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/member_delete" />

    <!-- User ID Section -->

    <!-- Password Section -->

    <!-- Password Confirmation Section -->

    <!-- Address Section -->

    <!-- Buttons Section -->

</LinearLayout>
